# Archetype-ECS

./: .gitignore  Advanced_AI_To_Human_Conversion.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ECS_ANALYSIS_PLAN.md  ECS_DESCRIPTION.md  LICENSE  PHASE_IMPLEMENTATION_GUIDE.md  README.md  miri_output.txt  miri_output_2.txt  rule code.md  test_debug.rs  test_list.txt  test_output.txt  test_results.txt  validation_output.txt
benches/: bench_assets.rs  bench_events.rs  bench_hierarchy.rs  bench_observer.rs  bench_parallel.rs  bench_resources.rs  bench_serialization.rs  ecs_bench.rs  serialization.rs  simd_bench.rs  simple_spawn_bench.rs  spawn_bench.rs  trace_spawn_bench.rs
example/: basic.rs  parallel_systems.rs
examples/: 00_basic.rs  01_basic_queries.rs  02_change_detection.rs  03_system_dependencies.rs  04_event_system.rs  05_debug_visualization.rs  06_parallel_systems.rs  07_enhanced_profiling.rs  08_serialization.rs  09_hot_reload.rs  10_basic_phase1.rs  11_parallel_scheduler.rs  12_plugin_system.rs  13_spawn_error_handling.rs  14_profiling_guide.rs  15_naming_conventions.rs  16_profiling_basics.rs  assets.rs
profiling/: spawn_bench.rs
src/: app.rs  archetype.rs  bitset.rs  command.rs  component.rs  debug.rs  dependency.rs  ecs_bench.rs  entity.rs  error.rs  event.rs  event_bus.rs  event_subscriber.rs  event_types.rs  executor.rs  hierarchy.rs  hierarchy_debug_tests.rs  hierarchy_system.rs  hot_reload.rs  lib.rs  observer.rs  parallel.rs  plugin.rs  prelude.rs  profiling.rs  query.rs  reflection.rs  schedule.rs  serializable.rs  serialization.rs  simd.rs  storage.rs  system.rs  tests.rs  time.rs  transform.rs  utils.rs  world.rs  world_test_debug.rs
src/assets/: cache.rs  loader.rs  mod.rs  server.rs
src/builtin/: input.rs  mod.rs  transform.rs
src/resources/: asset_types.rs  handle.rs  loader.rs  manager.rs  mod.rs  pool.rs  resource.rs
tests/: change_detection.rs  hierarchy_comprehensive.rs  parallel_query.rs  profile_spawn.rs  query_cache.rs  reproduce_bug_remove_component.rs  reproduce_despawn.rs  stress_test_parallel.rs  test_command_buffer_deferred.rs  test_debug.rs  test_features.rs  test_named_stages.rs  test_simd.rs  test_simd_root.rs  test_storage_splitting.rs
