[package]
name = "archetype_ecs"
version = "1.1.0"
edition = "2021"
authors = ["Saptak Santra"]
description = "Archetype ECS - High-performance Entity Component System with parallel execution"
license = "Apache-2.0"

[dependencies]
ahash = "0.8.12"
rayon = "1.8"       
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
bincode = "1.3"
parking_lot = "0.12"  
lru = "0.12"         
crossbeam = "0.8"    
# tokio = "1.35"      
rustc-hash = "1.1"
slotmap = "1.0"
smallvec = "1.13"
tracing = { version = "0.1", optional = true }
tracing-appender = { version = "0.2.4", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["json"], optional = true }
bumpalo = "3.19.0"
tinyvec = { version = "1.10.0", features = ["alloc"] }

[dev-dependencies]
criterion = "0.5"  # Benchmarking
hecs = "0.10"

[features]
default = ["parallel"]
profiling = ["tracing", "tracing-appender", "tracing-subscriber"]
parallel = []

[[bench]]
name = "ecs_bench"
harness = false

[[bench]]
name = "bench_parallel"
harness = false

[[bench]]
name = "bench_observer"
harness = false

[[bench]]
name = "bench_hierarchy"
harness = false

[[bench]]
name = "bench_events"
harness = false

[[bench]]
name = "bench_serialization"
harness = false

[[bench]]
name = "bench_resources"
harness = false

[[example]]
name = "basic"
path = "example/basic.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
