[package]
name = "archetype_ecs"
version = "1.1.7"
edition = "2021"
authors = ["Saptak Santra"]
description = "Archetype ECS - High-performance Entity Component System with parallel execution"
license = "Apache-2.0"
repository = "https://github.com/saptak7777/Archetype-ECS"
homepage = "https://github.com/saptak7777/Archetype-ECS"
documentation = "https://docs.rs/archetype_ecs"

[dependencies]
ahash = "0.8.12"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
parking_lot = "0.12"
lru = "0.16.2"
crossbeam = "0.8"
glam = { version = "0.30.9", features = ["serde", "scalar-math"] }
# tokio = "1.35"      
rustc-hash = "2.1.1"
slotmap = { version = "1.0", features = ["serde"] }
smallvec = "1.13"
tracing = { version = "0.1", optional = true }
tracing-appender = { version = "0.2.4", optional = true }
tracing-subscriber = { version = "0.3.20", features = [
    "json",
], optional = true }
bumpalo = "3.19.0"
tinyvec = { version = "1.10.0", features = ["alloc"] }

[dev-dependencies]
criterion = "0.8.1" # Benchmarking
hecs = "0.10"

[features]
default = ["parallel"]
profiling = ["tracing", "tracing-appender", "tracing-subscriber"]
parallel = []

[[bench]]
name = "ecs_bench"
harness = false

[[bench]]
name = "bench_parallel"
harness = false

[[bench]]
name = "bench_observer"
harness = false

[[bench]]
name = "bench_hierarchy"
harness = false

[[bench]]
name = "bench_events"
harness = false


[[example]]
name = "basic"
path = "example/basic.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
